# Synth

./: .gitignore  CMakeLists.txt  JUCE_8_WEBVIEW_GUIDE.md  PROJUCER_SETUP.md  README.md  REGENERATE_PROJECT.md  Synth.jucer
Blackway FX Kit (VST)/: info_vst.txt
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
UI/: app.js  components.html  components.js  demo.html  styles.css  ui.html
